Register devices node and remove basic node

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
   "homepage": "https://github.com/ottoszika/node-red-contrib-ewelink#readme",
   "node-red": {
     "nodes": {
-      "ewlink-credentials": "src/credentials/credentials.js",
-      "basic": "src/basic/basic.js"
+      "ewelink-credentials": "src/credentials/credentials.js",
+      "ewelink-devices": "src/devices/devices.js"
     }
   },
   "dependencies": {
