--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "node-red": "^1.0.3",
     "node-red-node-test-helper": "^0.2.3",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "sinon": "^7.5.0"
   }
 }
