--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "ewelink-api": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-spies": "^1.0.0",
     "coveralls": "^3.0.9",
     "mocha": "^6.2.2",
     "mocha-lcov-reporter": "^1.3.0",
