--- a/package.json
+++ b/package.json
@@ -26,19 +26,23 @@
   "homepage": "https://github.com/ottoszika/node-red-contrib-ewelink#readme",
   "node-red": {
     "nodes": {
-      "ewlink-credentials": "src/credentials/credentials.js",
-      "basic": "src/basic/basic.js"
+      "ewelink-credentials": "src/credentials/credentials.js",
+      "ewelink-devices": "src/devices/devices.js"
     }
   },
   "dependencies": {
     "ewelink-api": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-spies": "^1.0.0",
     "coveralls": "^3.0.9",
     "mocha": "^6.2.2",
     "mocha-lcov-reporter": "^1.3.0",
     "node-red": "^1.0.3",
     "node-red-node-test-helper": "^0.2.3",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "sinon": "^7.5.0"
   }
 }
