--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "node-red": {
     "nodes": {
       "ewelink-credentials": "src/credentials/credentials.js",
-      "ewelink-devices": "src/devices/devices.js"
+      "ewelink-devices": "src/devices/devices.js",
+      "ewelink-generic-device": "src/generic-device/generic-device.js"
     }
   },
   "dependencies": {
