--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "nodes": {
       "ewelink-credentials": "src/credentials/credentials.js",
       "ewelink-devices": "src/devices/devices.js",
-      "ewelink-generic-device": "src/generic-device/generic-device.js"
+      "ewelink-generic-device": "src/generic-device/generic-device.js",
+      "ewelink-firmware-version": "src/firmware-version/firmware-version.js"
     }
   },
   "dependencies": {
