--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
       "ewelink-devices": "src/devices/devices.js",
       "ewelink-generic-device": "src/generic-device/generic-device.js",
       "ewelink-firmware-version": "src/firmware-version/firmware-version.js",
-      "ewelink-power-state": "src/power-state/power-state.js"
+      "ewelink-power-state": "src/power-state/power-state.js",
+      "ewelink-channel-count": "src/channel-count/channel-count.js"
     }
   },
   "dependencies": {
