Register power usage node

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
       "ewelink-firmware-version": "src/firmware-version/firmware-version.js",
       "ewelink-power-state": "src/power-state/power-state.js",
       "ewelink-channel-count": "src/channel-count/channel-count.js",
-      "ewelink-event-listener": "src/event-listener/event-listener.js"
+      "ewelink-event-listener": "src/event-listener/event-listener.js",
+      "ewelink-power-usage": "src/power-usage/power-usage.js"
     }
   },
   "dependencies": {
