Register temperature node

--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
       "ewelink-channel-count": "src/channel-count/channel-count.js",
       "ewelink-event-listener": "src/event-listener/event-listener.js",
       "ewelink-power-usage": "src/power-usage/power-usage.js",
-      "ewelink-humidity": "src/humidity/humidity.js"
+      "ewelink-humidity": "src/humidity/humidity.js",
+      "ewelink-temperature": "src/temperature/temperature.js"
     }
   },
   "dependencies": {
